--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.4",
+    "three": "^0.170.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
