--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^7.0.1",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.6.0",
     "vite": "^5.4.10",
     "vue-tsc": "^2.1.6"
