--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@vueuse/core": "^11.2.0",
     "pinia": "^2.2.4",
     "three": "^0.170.0",
     "vue": "^3.5.12",
