--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^7.0.1",
+    "sass-embedded": "^1.80.6",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.0",
     "vite": "^5.4.10",
